print page added

--- a/index.html
+++ b/index.html
@@ -168,3 +168,4 @@
     <img src="logo.png" alt="Watermark" class="watermark">
 </body>
 </html>
+<button onclick="window.print()">Print Page</button>
